# cpcmake

./: .gitignore  CMakeLists.txt  main.cpp
example/: CMakeLists.txt  main.cpp
include/: IPDFReaderDelegate.h  PDFReader.h  PDFReaderDelegate.Linux.h  PDFReaderDelegate.Mac.h  PDFReaderDelegate.Windows.h  PDFReaderDelegate.h  PDFReaderFactory.h
src/: PDFReaderDelegate.Linux.cpp  PDFReaderDelegate.Mac.cpp  PDFReaderDelegate.Windows.cpp
tests/: CMakeLists.txt  PDFReaderTests.cpp
